Relocate git config files
Keep order in dotfiles

Use main folder ~/.config/ to store config files
Update commit template path

--- a/.config/git/config
+++ b/.config/git/config
@@ -2,7 +2,7 @@
     editor = vim
 [commit]
     gpgsign = true
-    template = /home/sg/.gitmessage.txt
+    template = ~/.config/git/gitmessage.txt
 [gpg]
     program = gpg
 [alias]
