--- a/.config/git/config
+++ b/.config/git/config
@@ -1,5 +1,6 @@
 [core]
 	editor = vim
+	excludesfile = /home/sg/.config/git/gitignore
 [commit]
 	gpgsign = true
 	template = ~/.config/git/gitmessage.txt
