Update tmux config

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -3,19 +3,25 @@ set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
 
-# Use Alt-arrow keys to switch panes
-bind-key -n M-Left select-pane -L
-bind-key -n M-Right select-pane -R
-bind-key -n M-Up select-pane -U
-bind-key -n M-Down select-pane -D
-
-# Shift-arrow to switch windows
-bind-key -n S-Left previous-window
-bind-key -n S-Right next-window
-
 # Mouse mode
-# setw -g mouse on
+set -g mouse on
 
-# Set easier window split keys
+# Set window split keys
+unbind %
 bind-key v split-window -h
+unbind '"'
 bind-key s split-window -v
+
+# Set pane resize keys
+bind-key -r C-Left resize-pane -L 5
+bind-key -r C-Right resize-pane -R 5
+bind-key -r C-Up resize-pane -U 5
+bind-key -r C-Down resize-pane -D 5
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'odedlaz/tmux-onedark-theme'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
