Add tmux compatibility with neovim

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# Nvim compatibility
+set-option -sg escape-time 10
+set-option -g focus-events on
+set-option -sa terminal-overrides ",xterm-256color:RGB"
+
 # Send prefix
 set-option -g prefix C-a
 unbind-key C-a
