--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -26,6 +26,7 @@ bind-key -r C-Down resize-pane -D 5
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
