Change tmux prefix and add sensible plugin

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -4,7 +4,7 @@ set-option -g focus-events on
 set-option -sa terminal-overrides ",xterm-256color:RGB"
 
 # Send prefix
-set-option -g prefix C-a
+set-option -g prefix C-Space
 unbind-key C-a
 bind-key C-a send-prefix
 
@@ -25,6 +25,7 @@ bind-key -r C-Down resize-pane -D 5
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
