Setup tmux sessions with vim

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -30,5 +30,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
+# Plugins config
+set -g @resurrect-strategy-nvim 'session'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
