Fix tmux prefix config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,9 +4,9 @@ set-option -g focus-events on
 set-option -sa terminal-overrides ",xterm-256color:RGB"
 
 # Send prefix
+unbind-key C-b
 set-option -g prefix C-Space
-unbind-key C-a
-bind-key C-a send-prefix
+bind-key C-Space send-prefix
 
 # Mouse mode
 set -g mouse on
