--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,16 @@
 # Nvim compatibility
 set-option -sg escape-time 10
 set-option -g focus-events on
+set-option -g status-position top
 set-option -sa terminal-overrides ",xterm-256color:RGB"
 
 # Send prefix
 unbind-key C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
+
+unbind r
+bind r source-file $HOME/.config/tmux/tmux.conf
 
 # Mouse mode
 set -g mouse on
