Add wsl configuration comment for WSL

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -27,5 +27,11 @@ colors: *one_dark
 
 live_config_reload: true
 
+# # Shell configuration for wsl
+# shell:
+#   program: wsl
+#   args:
+#     - --cd ~
+
 key_bindings:
   - { key: Space,  mods: Control, chars: "\x00" }
