--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ set-option -g focus-events on
 set-option -g status-position top
 set-option -sa terminal-overrides ",xterm-256color:RGB"
 
+# Set vi mode for copy mode
+setw -g mode-keys vi
+
 # Send prefix
 unbind-key C-b
 set-option -g prefix C-Space
