--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,9 @@ bind-key -r C-Right resize-pane -R 5
 bind-key -r C-Up resize-pane -U 5
 bind-key -r C-Down resize-pane -D 5
 
+# Git commit
+bind-key C-g display-popup -E 'git commit -S -v'
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
