Add key bind for tmuxinator project selection

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,9 @@ bind-key v split-window -h
 unbind '"'
 bind-key s split-window -v
 
+# tmuxinator project selection
+bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  /\\n/g' | fzf | xargs -I {} tmuxinator start {}"
+
 # Set pane resize keys
 bind-key -r C-Left resize-pane -L 5
 bind-key -r C-Right resize-pane -R 5
