Remove tmux neovim movement plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,21 +19,14 @@ set -g mouse on
 unbind %
 bind-key v split-window -h
 unbind '"'
-bind-key s split-window -v
+bind-key h split-window -v
 
 # tmuxinator project selection
 bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  /\\n/g' | fzf | xargs -I {} tmuxinator start {}"
 
-# Set pane resize keys
-bind-key -r C-Left resize-pane -L 5
-bind-key -r C-Right resize-pane -R 5
-bind-key -r C-Up resize-pane -U 5
-bind-key -r C-Down resize-pane -D 5
-
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
