--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,8 @@ bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  /\\n/g' | fzf
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
