--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,9 +17,10 @@ set -g mouse on
 
 # Set window split keys
 unbind %
-bind-key v split-window -h
+bind-key v split-window -h -c "#{pane_current_path}"
 unbind '"'
-bind-key h split-window -v
+bind-key h split-window -v -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 # tmuxinator project selection
 bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  /\\n/g' | fzf | xargs -I {} tmuxinator start {}"
