--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,7 @@ bind-key h split-window -v -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
 # tmuxinator project selection
-bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  /\\n/g' | fzf | xargs -I {} tmuxinator start {}"
+bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  \\+/\\n/g' | fzf | xargs -I {} tmuxinator start {}"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
