Add nvim tmux compatible movement

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,20 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'aserowy/tmux.nvim'
+
+# Navigation config
+set -g @tmux-nvim-navigation-cycle false
+
+set -g @tmux-nvim-navigation-keybinding-left 'C-Left'
+set -g @tmux-nvim-navigation-keybinding-down 'C-Down'
+set -g @tmux-nvim-navigation-keybinding-up 'C-Up'
+set -g @tmux-nvim-navigation-keybinding-right 'C-Right'
+
+set -g @tmux-nvim-resize-keybinding-left 'S-Left'
+set -g @tmux-nvim-resize-keybinding-down 'S-Down'
+set -g @tmux-nvim-resize-keybinding-up 'S-Up'
+set -g @tmux-nvim-resize-keybinding-right 'S-Right'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
