Add theme selection using environment variable
TODO: create a way to keep same theme for tmux and terminal, maybe using
a command

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'aserowy/tmux.nvim'
 
 # Navigation config
