Allow tmux to finish a session without killing the terminal
If other session exist attatch to it

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@ set-option -sa terminal-overrides ",xterm-256color:RGB"
 
 set-option -g default-command /usr/bin/fish
 set-option -g default-shell /usr/bin/fish
+set-option -g detach-on-destroy off
 
 # Set vi mode for copy mode
 setw -g mode-keys vi
