--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,6 +28,7 @@ bind-key c new-window -c "#{pane_current_path}"
 
 # tmuxinator project selection
 bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  \\+/\\n/g' | fzf | xargs -I {} tmuxinator start {}"
+bind-key g display-popup -E "bash $HOME/.config/tmux/scripts/gitmojis/select-gitmoji.sh"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
