--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,8 @@ unbind '"'
 bind-key h split-window -v -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
+
 # tmuxinator project selection
 bind-key C-o display-popup -E "tmuxinator list | sed 1d | sed 's/  \\+/\\n/g' | fzf | xargs -I {} tmuxinator start {}"
 bind-key g display-popup -E "bash $HOME/.config/tmux/scripts/gitmojis/select-gitmoji.sh"
