fix: 🩹 update aws symbol to avoid emoji overflow

--- a/starship/config.toml
+++ b/starship/config.toml
@@ -36,6 +36,9 @@ vimcmd_visual_symbol = "[](bold yellow)"
 # format = '[ $time]($style)'
 # time_range = "22:00:00-06:00:00"
 
+[aws]
+symbol = " "
+
 [package]
 symbol = "󰏗 "
 
