--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,6 +40,10 @@ set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'aserowy/tmux.nvim'
 
+# catppuccin config
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_default_text "#W"
+
 # Navigation config
 set -g @tmux-nvim-navigation-cycle false
 
