feat: ✨ update file permissions for scripts files

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,8 +28,8 @@ bind-key c new-window -c "#{pane_current_path}"
 
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
 
-bind-key C-o display-popup -E "bash $HOME/.config/tmux/scripts/sessions/zoxide.sh"
-bind-key g display-popup -E "bash $HOME/.config/tmux/scripts/gitmojis/select-gitmoji.sh"
+bind-key C-o display-popup -E "$HOME/.config/tmux/scripts/sessions/zoxide.sh"
+bind-key g display-popup -E "$HOME/.config/tmux/scripts/gitmojis/select-gitmoji.sh"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
