feat: ✨ update tmux catppuccin theme config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,15 +36,25 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'aserowy/tmux.nvim'
 
 # catppuccin config
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_default_text "#W"
+set -g @plugin 'catppuccin/tmux#v2.1.0'
+set -g @catppuccin_flavor 'mocha'
+run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_status_style "basic"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 # Navigation config
+set -g @plugin 'aserowy/tmux.nvim'
 set -g @tmux-nvim-navigation-cycle false
 
 set -g @tmux-nvim-navigation-keybinding-left 'C-Left'
