--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,6 +29,8 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
 
 bind-key C-o display-popup -E "$HOME/.config/tmux/scripts/sessions/zoxide.sh"
+bind-key K confirm-before -p "Kill session? (y/n)" "run 'tmux-use teardown' \; kill-session""
+
 bind-key g display-popup -E "$HOME/.config/tmux/scripts/gitmojis/select-gitmoji.sh"
 
 # Plugins
