--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,8 +28,8 @@ bind-key c new-window -c "#{pane_current_path}"
 
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
 
-bind-key C-o display-popup -E "$HOME/.config/tmux/scripts/sessions/zoxide.sh"
-bind-key K confirm-before -p "Kill session? (y/n)" "run 'tmux-use teardown' \; kill-session""
+bind-key C-o display-popup -E "tmux-use session setup"
+bind-key C-k display-popup -E "tmux-use session teardown"
 
 bind-key g display-popup -E "$HOME/.config/tmux/scripts/gitmojis/select-gitmoji.sh"
 
