feat(mise): allow .nvmrc file detection

--- a/mise/config.toml
+++ b/mise/config.toml
@@ -3,3 +3,6 @@ node = "lts-hydrogen"
 python = "3.10"
 usage = "latest"
 "npm:neovim" = "latest"
+
+[settings]
+idiomatic_version_file_enable_tools = ["node"]
